--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@
     position: absolute;
     width: 1200px;
     height: 500px;
-    background-color: purple;
+    /* background-color: purple; */
     overflow: hidden;
 }
 
