--- a/css/FRS01.css
+++ b/css/FRS01.css
@@ -1,6 +1,18 @@
+/* banner */
+.banner{
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+}
+.banner img{
+    width: 100%;
+}
+
+
 /* FRS01部分 */
 .FRS01_1{
     height: 300px;
+    margin-top: 50px;
     /* background-color: #000fff; */
 }
 .FRS02_1{
