--- a/css/index.css
+++ b/css/index.css
@@ -3,16 +3,16 @@
 .main {
     /* float:left; */
     /* display: block; */
-    width: 1200px;
+    width: 100%;
     height: 500px;
-    margin: 30px auto;
+    margin: 0px auto;
     /* margin-left: 215px;
     margin-top: 10px; */
 }
 
 .focus {
     position: absolute;
-    width: 1200px;
+    width: 100%;
     height: 500px;
     /* background-color: purple; */
     overflow: hidden;
@@ -22,27 +22,32 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 600%;
 }
 
 .focus ul li {
     float: left;
 }
+.focus ul li img{
+    display: block;
+    width: 113%;
+    height: 100%;
+}
 
 .arrow-l,
 .arrow-r {
-    display: none;
+    display: block;
     position: absolute;
     top: 50%;
-    margin-top: -20px;
-    width: 24px;
-    height: 40px;
+    margin-top: -15px;
+    width: 28px;
+    height: 30px;
     background: rgba(0, 0, 0, .3);
     text-align: center;
-    line-height: 40px;
+    line-height: 26px;
     color: #fff;
     font-family: 'icomoon';
-    font-size: 18px;
+    font-size: 26px;
+    transform: scale(1,1.6);
     z-index: 2;
 }
 
@@ -53,7 +58,7 @@
 .circle {
     position: absolute;
     bottom: 10px;
-    left: 550px;
+    left: 650px;
 }
 
 .circle li {
@@ -100,6 +105,8 @@
     background-color: #fff;
     margin-right: 20px;
     margin-bottom: 20px;
+    overflow: hidden;
+
 }
 .box-bd ul li a>img{
     /* width: 100%; */
@@ -119,19 +126,47 @@
     color: #999999;
     margin-left: 20px;
 }
+.box-bd ul li a>img:hover{
+    transform:scale(1.2,1.2);
+    transition: 2s;
+}
+
+
 .box-bd ul li a:hover{
     position: relative;
     top: 1px;
     left: 1px;
     box-shadow: 2px 3px 3px 0px rgba(0, 0, 0, 0.2);
 }
+
+/* 返回顶部 */
+.back{
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    color:#fff;
+    background:rgba(0, 0, 0, .5);
+    right: 20px;
+    bottom: 50px;
+    cursor: pointer;
+    display: none;
+}
+.back:hover{
+    color: rgb(165, 227, 235);
+}
+
+
 /* 图片滚动部分 */
 
 #photo-list {
     
     width: 1200px;
     height: 254px;
-    margin: 50px auto;
+    margin: 20px auto;
     overflow: hidden;
     /*溢出部份隐藏*/
     border: 1px dashed #ccc;
